# reeldock

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .repo-policy.yml  .repo-standards-migration-summary.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  SECURITY.md  alembic.ini  config.example.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
.agents/memories/: 20-python.md
.agents/rules/: 20-python.md
.cursor/rules/: 20-python.mdc
.github/workflows/: ai-rules-check.yml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  docs-check.yml  publish-dockerhub.yml  publish-ghcr.yml  release-please.yml  scorecard.yml  secret-scan.yml  semantic-pull-request.yml  uv-lock-sync.yml  validate-proxmox.yml
.rulesync/rules/: 20-python.md
alembic/: env.py
alembic/versions/: 90d922c029c3_initial_schema.py  b4e8f1a92d10_backfill_imported_videos.py  c7a3e9f12b40_create_app_settings.py
app/: __init__.py  auth.py  config.py  db.py  factory.py  main.py  models.py  path_checks.py  preflight.py  queue.py  serializers.py  settings_registry.py  validators.py
app/routes/: pages.py  ws.py
app/services/: audiobookshelf.py  ffmpeg.py  filesystem.py  import_pipeline.py  jobs.py  ytdlp.py
app/static/: app.css
app/static/fonts/: fonts.css
app/templates/: _macros.html  base.html  index.html  job_detail.html  jobs.html  playlist_preview.html  preview.html  settings.html
assets/screenshots/: .gitkeep
browser-extension/: CHANGELOG.md  README.md  package.json
browser-extension/manifests/: base.json  firefox.json
browser-extension/scripts/: build.mjs  package-chrome.mjs  package-firefox.mjs
browser-extension/src/: background.js  options.html  options.js  popup.html  popup.js  settings.js  ui.js
docs/: audiobookshelf.md  browser-extension.md  configuration.md  deployment-docker.md  deployment-proxmox.md  development.md  paths-and-volumes.md  quickstart.md  releasing.md  security.md  troubleshooting.md
scripts/: check-docker-paths.sh  check-requirements-lock.sh  compile-requirements.sh
scripts/proxmox/: README.md  cloud-init-user-data.yml  guest-install.sh  proxmox-install.sh
systemd/: abs-media-importer-app.service  abs-media-importer-worker.service  yt-abs-importer-app.service  yt-abs-importer-worker.service
tests/: conftest.py  test_audiobookshelf.py  test_config.py  test_extension_api.py  test_factory.py  test_ffmpeg_command.py  test_filesystem.py  test_import_pipeline.py  test_job_dedup.py  test_jobs.py  test_jobs_delete_api.py  test_migrations.py  test_path_checks.py  test_preflight.py  test_readiness.py  test_settings.py  test_url_validation.py  test_ytdlp_command.py
worker/: tasks.py
