[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "yt-abs-importer"
version = "0.1.0"
description = "Selective YouTube-to-Audiobookshelf importer"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "worker*"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "worker", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # bandit security
    "PTH", # pathlib
    "RUF", # ruff-specific
]
ignore = [
    "ANN101",  # missing self annotation
    "ANN102",  # missing cls annotation
    "S101",    # assert in tests
    "S603",    # subprocess without shell=True is fine
    "S607",    # partial path for executable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "N"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
