[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reeldock"
version = "1.8.0"
description = "Selective YouTube-to-Audiobookshelf importer"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andrew Ryder"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "jinja2==3.1.6",
    "python-multipart==0.0.32",
    "itsdangerous==2.2.0",
    "sqlalchemy>=2.0.51",
    "aiosqlite==0.22.1",
    "greenlet",
    "redis==8.0.1",
    "rq==2.10.0",
    "pydantic-settings==2.6.1",
    "pyyaml==6.0.3",
    "httpx==0.27.2",
    "python-slugify==8.0.4",
    "mutagen==1.47.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "anyio==4.7.0",
    "coverage==7.6.1",
    "ruff==0.8.3",
    "mypy==2.1.0",
    "types-pyyaml==6.0.12.20260518",
    "pre-commit==4.6.0",
    "pre-commit-hooks==6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "worker*"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "worker", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # bandit security
    "PTH", # pathlib
    "RUF", # ruff-specific
]
ignore = [
    "ANN101",  # missing self annotation
    "ANN102",  # missing cls annotation
    "S101",    # assert in tests
    "S603",    # subprocess without shell=True is fine
    "S607",    # partial path for executable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "N"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
